update all Sources for the Serialisation-Tool