@@ -4,30 +4,22 @@ package org.sdmlib.serialization;
  NetworkParser
  Copyright (c) 2011 - 2013, Stefan Lindel
  All rights reserved.
+ 
+ Licensed under the EUPL, Version 1.1 or – as soon they
+ will be approved by the European Commission - subsequent
+ versions of the EUPL (the "Licence");
+ You may not use this work except in compliance with the Licence.
+ You may obtain a copy of the Licence at:
 
- Redistribution and use in source and binary forms, with or without
- modification, are permitted provided that the following conditions are met:
- 1. Redistributions of source code must retain the above copyright
- notice, this list of conditions and the following disclaimer.
- 2. Redistributions in binary form must reproduce the above copyright
- notice, this list of conditions and the following disclaimer in the
- documentation and/or other materials provided with the distribution.
- 3. All advertising materials mentioning features or use of this software
- must display the following acknowledgement:
- This product includes software developed by Stefan Lindel.
- 4. Neither the name of contributors may be used to endorse or promote products
- derived from this software without specific prior written permission.
+ http://ec.europa.eu/idabc/eupl5
 
- THE SOFTWARE 'AS IS' IS PROVIDED BY STEFAN LINDEL ''AS IS'' AND ANY
- EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
- WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
- DISCLAIMED. IN NO EVENT SHALL STEFAN LINDEL BE LIABLE FOR ANY
- DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
- (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
- LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
- SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ Unless required by applicable law or agreed to in
+ writing, software distributed under the Licence is
+ distributed on an "AS IS" basis,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ express or implied.
+ See the Licence for the specific language governing
+ permissions and limitations under the Licence.
 */
 import java.util.ArrayList;
 import java.util.Collection;
@@ -189,11 +181,7 @@ public abstract class EntityList implements BaseEntityList, List<Object> {
 	 *             If there is no value for the index.
 	 */
 	public String getString(int index) throws RuntimeException {
-		Object object = get(index);
-		if (object == null) {
-			return null;
-		}
-		return object.toString();
+		return get(index).toString();
 	}
 
 	/**
@@ -237,7 +225,7 @@ public abstract class EntityList implements BaseEntityList, List<Object> {
 	 * @return
 	 */
 	public EntityList put(int value) {
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -250,7 +238,7 @@ public abstract class EntityList implements BaseEntityList, List<Object> {
 	 * @return this.
 	 */
 	public EntityList put(long value) {
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
@@ -300,7 +288,7 @@ public abstract class EntityList implements BaseEntityList, List<Object> {
 	 *             If the index is negative or if the value is not finite.
 	 */
 	public EntityList put(int index, double value) throws RuntimeException {
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -318,7 +306,7 @@ public abstract class EntityList implements BaseEntityList, List<Object> {
 	 *             If the index is negative.
 	 */
 	public EntityList put(int index, int value) throws RuntimeException {
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -336,7 +324,7 @@ public abstract class EntityList implements BaseEntityList, List<Object> {
 	 *             If the index is negative.
 	 */
 	public EntityList put(int index, long value) throws RuntimeException {
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
